tests/ui/traits/non_lifetime_binders/fail.stderr
error[E0277]: the trait bound `T: Trait` is not satisfied
  --> $DIR/fail.rs:18:5
   |
LL |     fail();
   |     ^^^^^^ the trait `Trait` is not implemented for `T`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/fail.rs:5:1
   |
LL | trait Trait {}
   | ^^^^^^^^^^^
note: required by a bound in `fail`
  --> $DIR/fail.rs:9:15
   |
LL | fn fail()
   |    ---- required by a bound in this function
LL | where
LL |     for<T> T: Trait,
   |               ^^^^^ required by this bound in `fail`

error[E0277]: `T` cannot be sent between threads safely
  --> $DIR/fail.rs:20:5
   |
LL |     auto_trait();
   |     ^^^^^^^^^^^^ `T` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `T`
note: required by a bound in `auto_trait`
  --> $DIR/fail.rs:14:15
   |
LL | fn auto_trait()
   |    ---------- required by a bound in this function
LL | where
LL |     for<T> T: Send,
   |               ^^^^ required by this bound in `auto_trait`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
